Add XAUTHORITY environmental variable to wdall-app.service.

--- a/systemd/wdal-app.service
+++ b/systemd/wdal-app.service
@@ -6,6 +6,7 @@ Requires=network-online.target
 [Service]
 User=myuser
 Environment="DISPLAY=:0"
+Environment="XAUTHORITY=$HOME/.Xauthority"
 WorkingDirectory=/var/web-desktop-app-launcher
 ExecStart=/usr/bin/wdal-app
 Restart=always
